
libjitincludedir = $(includedir)/jit
libjitinclude_HEADERS = jit.h \
						jit-apply.h \
						jit-block.h \
						jit-common.h \
						jit-context.h \
						jit-defs.h \
						jit-dump.h \
						jit-elf.h \
						jit-except.h \
						jit-function.h \
						jit-init.h \
						jit-insn.h \
						jit-intrinsic.h \
						jit-meta.h \
						jit-opcode.h \
						jit-plus.h \
						jit-type.h \
						jit-util.h \
						jit-value.h \
						jit-walk.h

DISTCLEANFILES = jit-defs.h
